--- a/ff.yml
+++ b/ff.yml
@@ -82,8 +82,6 @@
        username: "{{ user }}"
        password: "{{ pass }}"
        validate_certs: false
-       subnets:
-         - name: 20.0.1.1
-           mask: 24
-           scope: public
-
+       gateway_ip: 20.0.1.1
+       subnet_mask: 24
+       scope: public
