--- a/fremove.yml
+++ b/fremove.yml
@@ -6,7 +6,7 @@
    vars:
      ansible_connection: local
      ansible_python_interpreter: /usr/bin/python3
-     tn_name: 'Heroes'
+     tn_name: 'am_tn'
 
    vars_prompt:
      - name: "apic_ip"
