--- a/ff.yml
+++ b/ff.yml
@@ -116,38 +116,41 @@
 
 
    - name: create a subnet for Bridge-Domain_webserver
-     aci_bd_subnet:
+     aci_bd:
        name: "{{ sub_1 }}"
        tenant: "{{ tn_name }}"
        bd: "{{ bd_1 }}"
-       gateway: 20.0.1.1
-       mask: 24
+       gateway_ip: 20.0.1.1
+       subnet_mask: 24
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
        validate_certs: false
        
-   - name: create a subnet for Bridge-Domain_App-server
-     aci_bd_subnet:
-       name: "{{ sub_2 }}"
-       tenant: "{{ tn_name }}"
-       bd: "{{ bd_2 }}"
-       gateway: 10.0.1.1
-       mask: 24
-       host: "{{ inventory_hostname }}"
-       username: "{{ user }}"
-       password: "{{ pass }}"
-       validate_certs: false
+#   - name: create a subnet for Bridge-Domain_App-server
+#     aci_bd_subnet:
+#       name: "{{ sub_2 }}"
+#       tenant: "{{ tn_name }}"
+#       bd: "{{ bd_2 }}"
+#       gateway: 10.0.1.1
+#       mask: 24
+#       host: "{{ inventory_hostname }}"
+#       username: "{{ user }}"
+#       password: "{{ pass }}"
+#       validate_certs: false
 
 
-   - name: create a subnet for Bridge-Domain_Data-Base
-     aci_bd_subnet:
-       name: "{{ sub_3 }}"
-       tenant: "{{ tn_name }}"
-       bd: "{{ bd_3 }}"
-       gateway: 10.0.2.1
-       mask: 24
-       host: "{{ inventory_hostname }}"
-       username: "{{ user }}"
-       password: "{{ pass }}"
-       validate_certs: false
+#  - name: create a subnet for Bridge-Domain_Data-Base
+#     aci_bd_subnet:
+#       name: "{{ sub_3 }}"
+#       tenant: "{{ tn_name }}"
+#       bd: "{{ bd_3 }}"
+#       gateway: 10.0.2.1
+#       mask: 24
+#       host: "{{ inventory_hostname }}"
+#       username: "{{ user }}"
+#       password: "{{ pass }}"
+#       validate_certs: false
+
+
+
