--- a/ff.yml
+++ b/ff.yml
@@ -2,6 +2,7 @@
 -  hosts: apic
    any_errors_fatal: true
    gather_facts: no
+   deprecation_warnings: False 
 
    vars:
      ansible_connection: local
@@ -97,8 +98,8 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
-       scope: private
        validate_certs: false
+       scope: private
 
 
    - name: create a Bridge-Domain_Data_Base
@@ -109,50 +110,47 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
-       scope: private
        validate_certs: false
+       scope: private
+
+
+
+   - name: create a subnet for Bridge-Domain_webserver
+     aci_bd_subnet:
+       name: "{{ sub_1 }}"
+       tenant: "{{ tn_name }}"
+       bd: "{{ bd_1 }}"
        gateway_ip: 20.0.1.1
        subnet_mask: 24
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+       validate_certs: false
        
+   - name: create a subnet for Bridge-Domain_App-server
+     aci_bd_subnet:
+       name: "{{ sub_2 }}"
+       tenant: "{{ tn_name }}"
+       bd: "{{ bd_2 }}"
+       gateway_ip: 10.0.1.1
+       subnet_mask: 24
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+       validate_certs: false
 
 
-
-#   - name: create a subnet for Bridge-Domain_webserver
-#     aci_bd_subnet:
-#       name: "{{ sub_1 }}"
-#       tenant: "{{ tn_name }}"
-#       bd: "{{ bd_1 }}"
-#       gateway_ip: 20.0.1.1
-#       subnet_mask: 24
-#       host: "{{ inventory_hostname }}"
-#       username: "{{ user }}"
-#       password: "{{ pass }}"
-#       validate_certs: false
-#       
-#   - name: create a subnet for Bridge-Domain_App-server
-#     aci_bd_subnet:
-#       name: "{{ sub_2 }}"
-#       tenant: "{{ tn_name }}"
-#       bd: "{{ bd_2 }}"
-#       gateway: 10.0.1.1
-#       mask: 24
-#       host: "{{ inventory_hostname }}"
-#       username: "{{ user }}"
-#       password: "{{ pass }}"
-#       validate_certs: false
-
-
-#  - name: create a subnet for Bridge-Domain_Data-Base
-#     aci_bd_subnet:
-#       name: "{{ sub_3 }}"
-#       tenant: "{{ tn_name }}"
-#       bd: "{{ bd_3 }}"
-#       gateway: 10.0.2.1
-#       mask: 24
-#       host: "{{ inventory_hostname }}"
-#       username: "{{ user }}"
-#       password: "{{ pass }}"
-#       validate_certs: false
+  - name: create a subnet for Bridge-Domain_Data-Base
+     aci_bd_subnet:
+       name: "{{ sub_3 }}"
+       tenant: "{{ tn_name }}"
+       bd: "{{ bd_3 }}"
+       gateway_ip: 10.0.2.1
+       subnet_mask: 24
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
+       validate_certs: false
 
 
 
