--- a/ff.yml
+++ b/ff.yml
@@ -153,3 +153,37 @@
 
 
 
+   - name: Create EPGs
+     aci_epg:
+       tenant: "{{ tn_name }}"
+       ap: "{{ ap_name }}"
+       epgs:
+         - name: "{{ epg_1 }}"
+           description: "Description of EPG_Web"
+           bd: "{{ bd_1 }}"
+           contracts: 
+             - name: "{{ cont_1 }}"
+               type: consumer
+             - name: "{{ cont_3 }}"
+               type: provider
+       
+
+         - name: "{{ epg_2 }}"
+           description: "Description of EPG_App"
+           bd: "{{ bd_2 }}"
+           contracts: 
+             - name: "{{ cont_1 }}"
+               type: provider
+             - name: "{{ cont_2 }}"
+               type: consumer
+       
+         - name: "{{ epg_3 }}"
+           description: "Description of EPG_Data-Base"
+           bd: "{{ bd_3 }}"
+           contracts:
+             - name: "{{ cont_2 }}"
+               type: provider
+
+       host: "{{ inventory_hostname }}"
+       username: "{{ user }}"
+       password: "{{ pass }}"
