--- a/ff.yml
+++ b/ff.yml
@@ -187,3 +187,4 @@
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
+       validate_certs: false
