--- a/ff.yml
+++ b/ff.yml
@@ -153,18 +153,13 @@
 
 
 
-   - name: Create EPGs
+   - name: Create EPG_Web_Server
      aci_epg:
        tenant: "{{ tn_name }}"
        ap: "{{ ap_name }}"
        epg: "{{ epg_1 }}"
        description: "Description of EPG_Web"
        bd: "{{ bd_1 }}"
-#       contracts:
-#         - name: "{{ cont_1 }}"
-#         - type: consumer
-#         - name: "{{ cont_3 }}"
-#         - type: provider
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
