--- a/try.yml
+++ b/try.yml
@@ -356,6 +356,7 @@
      aci_domain:
        domain: "{{ L3_domain }}"
        domain_type: vmm
+       vm_provider: vmware
        host: "{{ inventory_hostname }}"
        username: "{{ user }}"
        password: "{{ pass }}"
